[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ICARUS*"]
exclude = ["Data*", "tests*"]

[project]
name = "ICARUS"
authors = [
    {name = "Tryfonas Themas", email = "tryfonthem@gmail.com"},
]

description = "ICARUS AIRPLANE DESIGN"
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "pip",
    "requests",
    "jsonpickle",
    "matplotlib",
    "numpy",
    "pandas",
    "ipykernel",
    "ipywidgets",
    "ipython",
    "tabulate",
    "pre-commit",
    "regex",
    "tqdm",
    "xmltodict",
    "inquirer",
    "pyfiglet",
    "gitpython",
    "airfoils @git+https://github.com/trifwn/airfoils.git",
    "xfoil @git+https://github.com/trifwn/xfoil-python-windows.git",
    'jax',
    'jaxlib',
    'jaxtyping',
    'interpax', # Maybe Deprecate
    "diffrax",
    "optimistix",
    'jaxopt',
    "optax",
    "nbconvert"
]
dynamic = ["version"]

[project.scripts]
icarus-cli = "cli:cli_home"

[tool.setuptools.package-data]
ICARUS = ["bin/*"]

[tool.setuptools.dynamic]
version = {attr = "ICARUS.__version__"}

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin"
]

#pretty = true
[tool.ruff.lint]
select = ["F", "E4", "E7", "E9"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
line-ending = "auto"
skip-magic-trailing-comma = false
indent-style = "space"
quote-style = "double"

[tool.isort]
force_single_line = true
profile = "black"
