[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ICARUS*", "bin*"]

[tool.setuptools.package-data]
bin = ["Linux/*", "Windows/*", "macOS/*"]
ICARUS = ["py.typed"]

[project]
name = "ICARUS"
authors = [{ name = "Tryfonas Themas", email = "tryfonthem@gmail.com" }]

description = "ICARUS AIRPLANE DESIGN"
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "pip",
    "requests",
    "jsonpickle",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "ipykernel",
    "ipywidgets",
    "ipython",
    "pre-commit",
    "rich",
    "xmltodict",
    "xfoil @git+https://github.com/trifwn/xfoil-python-prebuilt.git",
    'jax',
    'jaxlib',
    'jaxtyping',
    'interpax',
    "diffrax",
    "optimistix",
    'jaxopt',
    "optax",
    "nbconvert",
    "distinctipy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
dynamic = ["version"]

[project.scripts]
icarus-cli = "cli:cli_home"

[tool.setuptools.dynamic]
version = { attr = "ICARUS.__version__" }

[tool.mypy]
strict = true
python_version = "3.13"
show_error_codes = true
warn_unused_configs = true

[tool.ruff.lint]
select = ["F", "E4", "E7", "E9"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
line-ending = "auto"
skip-magic-trailing-comma = false
indent-style = "space"
quote-style = "double"

[tool.isort]
force_single_line = true
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "--disable-warnings"]
usefixtures = ["DB"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmarking (uses pytest-benchmark)",
    "performance: marks tests as performance tests",
    "stress: marks tests as stress tests",
    "unit: marks tests as unit tests",
]
